Add ga to links webpage

--- a/index.html
+++ b/index.html
@@ -55,4 +55,13 @@
 			<span>© BEMP - Todos os direitos reservados</span>
 		</footer>
 	</body>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-FDYL0P714E"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-FDYL0P714E');
+	</script>
 </html>
