--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<meta property="og:locale" content="pt">
 		<meta property="og:site_name" content="Links | BEMP - Plataforma de Agendamentos Online">
 		<meta property="og:url" content="https://links.bemp.com.br/">
+		<meta property="og:image" content="./assets/images/logo.png">
 		<meta property="og:description" content="Links sociais da plataforma BEMP. BEMP é uma plataforma para gestão completa para salões, estéticas, barbearias e/ou qualquer estabelecimento que necessite controlar seus agendamentos.">
 	</head>
 
