Adicionado menu Quero mais informações

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 		<section class="content">
 			<nav>
 				<ul class="links">
-					<li class="link"><a href="https://bemp.com.br" target="_blank"><i class="fas fa-link"></i>Site</a></li>
-					<li class="link"><a href="https://blog.bemp.com.br" target="_blank"><i class="fab fa-wordpress""></i>Blog</a></li>
-					<li class="link"><a href="https://ajuda.bemp.com.br" target="_blank"><i class="fas fa-database"></i>Suporte</a></li>
+					<li class="link"><a href="https://bemp.com.br/contato" target="_blank"><i class="fas fa-info-circle"></i>Quero mais informações</a></li>
+					<li class="link"><a href="https://bemp.com.br" target="_blank"><i class="fas fa-link"></i>Nosso Site</a></li>
+					<li class="link"><a href="https://blog.bemp.com.br" target="_blank"><i class="fab fa-wordpress""></i>Nosso Blog</a></li>
+					<li class="link"><a href="https://ajuda.bemp.com.br" target="_blank"><i class="fas fa-database"></i>Canal Suporte</a></li>
 					<li class="link"><a href="https://www.instagram.com/bemp.app" target="_blank"><i class="fab fa-instagram"></i>Instagram</a></li>
 					<li class="link"><a href="https://www.linkedin.com/company/bempapp" target="_blank"><i class="fab fa-linkedin"></i>Linkedin</a></li>
 					<li class="link"><a href="https://www.facebook.com/BEMP-104206321906254" target="_blank"><i class="fab fa-facebook"></i>Facebook</a></li>
