--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<section class="content">
 			<nav>
 				<ul class="links">
+					<li class="link"><a href="https://conteudos.bemp.com.br/barbearia-por-assinatura-um-guia-pratico-para-montar-um-clube-de-assinaturas-para-sua-barbearia" target="_blank"><i class="fas fa-book"></i>Barbearia por Assinatura [e-book]</a></li>
 					<li class="link"><a href="https://bemp.com.br/contato" target="_blank"><i class="fas fa-info-circle"></i>Quero mais informações</a></li>
 					<li class="link"><a href="https://bemp.com.br" target="_blank"><i class="fas fa-link"></i>Nosso Site</a></li>
 					<li class="link"><a href="https://blog.bemp.com.br" target="_blank"><i class="fab fa-wordpress""></i>Nosso Blog</a></li>
